Add the index of the footnote that appears at the bottom

--- a/wagtail_footnotes/templates/wagtail_footnotes/admin/footnotes_modal.html
+++ b/wagtail_footnotes/templates/wagtail_footnotes/admin/footnotes_modal.html
@@ -33,6 +33,7 @@
                             <table id="footnotes-listing" class="listing">
                                 <thead>
                                     <tr>
+                                        <th>{% translate "Index" %}</th>
                                         <th>{% translate "Text" %}</th>
                                         <th>{% translate "ID" %}</th>
                                     </tr>
